# newsbot

./: .env  .gitignore  AGENTS.md  README.md  dashboard.html  generate_synthetic_dataset.py  index.html  newsbot_notebook.ipynb  pyproject.toml  repo.html  reports.html  requirements.txt  s3_structure.txt  verify_frontend.py  verify_new_features.py
app/: main.py
clustering_techniques/: AGENTS.md  README.md  dbscan.py  developer_notes.md  hierarchical.py  kmeans.py  main.py
docs/: amgeneral.html  amgeneral2.html  index.html  newsbot.md  peer.html  peer.md
federated_learning/: AGENTS.md  README.md  client.py  developer_notes.md  main.py  placeholder_model.py  server.py  train_slm.py
foundational_dataset_synthetic/: analyst_ratings.csv  asset_master.csv  corporate_earnings.csv  dividend_history.csv  geopolitical_events.csv  insider_transactions.csv  macro_events.csv  market_data_1min.csv  nlp_annotations.csv  security_reference_data.csv  social_hourly_features.csv  text_documents.csv
frontend/: index.html  main.js  package-lock.json  package.json  styles.css  vite.config.ts
frontend_legacy/: index.html  main.js  styles.css
ingestion/: generic_ingestor.py
ingestion_scripts/: run_market_data_ingestion.py  run_phase2_data_ingestion.py
newsbot_project_files/: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  junior_analyst_interactive_ui.ipynb
output/: AM_General_report.md  junior_analyst_v1.gguf  report06142025.md
plugins/: market_volatility_monitor.py
scripts/: convert_synthetic_to_json.ts  generate_repo_map.py  generate_reports_index.py
(+255 files in other folders)
