[project]
name = "newsbot-nexus"
version = "2.0.0"
description = "AI-powered market intelligence and synthetic data platform."
authors = [{name = "Jules", email = "jules@newsbot.ai"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "pandas",
    "numpy",
    "transformers",
    "torch",
    "httpx",
    "requests",
    "faker",
    "pyarrow",
    "networkx",
    "python-multipart"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "semantic_narrative_library", "synthetic", "utils"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]
